--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="">
         <link rel="stylesheet" href="menu.css">
+        <link rel="stylesheet" href="consumer.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <title>Shameless Product Placement</title>
     </head>
     <body>
@@ -14,9 +17,24 @@
                 <div class="button_line"></div>
             </div>
             <div class="menu">
-                <p>This is the menu, I'll put navigation if you want to invest, etc. here!</p>
+                <ul class="menu_list">
+                    <li><a href="">PLAY</a></li>
+                    <li><a href="#">SPONSOR</a></li>
+                    <li><a href="#">INVESTOR</a></li>
+                    <li><a href="#">GAME DEVELOPER</a></li>
+                    <li><a href="#">MERCHANDISE</a></li>
+                </ul>
             </div>
         </header>
+        <div class="consumer">
+            <p><a href="">
+                <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
+            </a></p>
+            <img id="shih_tzu" src="assets/shih_tzu.png" alt="Shih Tzu">
+            <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
+            <button id="shih_zoo_download">Download</button>
+        </div>
         <script src="menu.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
