--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             </a></p>
             <img id="shih_tzu" src="assets/shih_tzu.png" alt="Shih Tzu">
             <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
-            <button id="shih_zoo_download">Download</button>
+            <img id="download_button_apple" src="assets/download_button_apple.png" alt="Shih Zoo Download">
+            <img id="les_dudes_coming_soon" src="assets/les_dudes_coming_soon.png" alt="Les Dudes Coming Soon">
         </div>
         <script src="menu.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
