--- a/sponsor.html
+++ b/sponsor.html
@@ -27,7 +27,28 @@
             </div>
         </header>
         <div class="content">
-            
+            <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
+            <div id="sponsor_buttons">
+                <button id="sponsor_buy_button" role="button"><span class="text">Sponsor</span></button>
+                <button id="sponsor_contact_button" role="button"><span class="text">Contact</span></button>
+            </div>
+            <div id="sponsor_overlay">
+                <div id="sponsor_information">
+                    <p id="sponsor_title">Why sponsor us?</p>
+                    <div class="sponsor_information_part_1">
+                        <p id="sponsor_details_part_1">
+                            Sponsoring Shameless Product Placement offers a unique opportunity to significantly boost your brand’s visibility and market presence through strategic in-game marketing. By partnering with Shameless Product Placement, your company will benefit from seamlessly integrated product placements within our games of your choice, reaching a vast audience of engaged gamers who align with your target demographic. This collaboration not only enhances brand awareness but also fosters a direct connection with consumers in an interactive and immersive environment. Through tailored marketing strategies and creative placements, your product will be showcased in a natural and effective manner, ensuring maximum impact and recall among gamers. Embrace this opportunity to elevate your brand’s visibility and market influence with Shameless Product Placement, where effective marketing meets interactive entertainment seamlessly.
+                        </p>
+                        <img id="sponsor_example_1" src="assets/example_image.png" alt="Sponsor Example 1">
+                    </div>
+                    <div class="sponsor_information_part_2">
+                        <img id="sponsor_example_2" src="assets/example_image.png" alt="Sponsor Example 2">
+                        <p id="sponsor_details_part_2">
+                            Buy a sponsor now and we will literally place your product into our newest game, Shih Zoo. You can pick exactly where in the game you want to appear, upload different art, and give exact instructions on what you want us to do! Right now, we even offer a free trial, where we will show you exactly what your product or advertisement will look like in our creations. Any inquiries are welcome, definitely contact us if you are thinking of something outside the box, because the possibilities are endless! Price specifics can be discussed with our founder, Charles J. Conlan.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="menu.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
