--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </div>
             <div class="menu">
                 <ul class="menu_list">
-                    <li><a href="">PLAY</a></li>
-                    <li><a href="#">SPONSOR</a></li>
-                    <li><a href="#">INVESTOR</a></li>
-                    <li><a href="#">GAME DEVELOPER</a></li>
+                    <li><a href="index.html">PLAY</a></li>
+                    <li><a href="sponsor.html">SPONSOR</a></li>
+                    <li><a href="investor.html">INVESTOR</a></li>
+                    <li><a href="#">DEVELOPER</a></li>
                     <li><a href="#">MERCHANDISE</a></li>
                 </ul>
             </div>
