--- a/sponsor.html
+++ b/sponsor.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="sponsor.css">
+        <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <title>Shameless Product Placement</title>
     </head>
@@ -18,10 +19,10 @@
             </div>
             <div class="menu">
                 <ul class="menu_list">
-                    <li><a href="">PLAY</a></li>
-                    <li><a href="#">SPONSOR</a></li>
-                    <li><a href="#">INVESTOR</a></li>
-                    <li><a href="#">GAME DEVELOPER</a></li>
+                    <li><a href="index.html">PLAY</a></li>
+                    <li><a href="sponsor.html">SPONSOR</a></li>
+                    <li><a href="investor.html">INVESTOR</a></li>
+                    <li><a href="#">DEVELOPER</a></li>
                     <li><a href="#">MERCHANDISE</a></li>
                 </ul>
             </div>
@@ -29,8 +30,8 @@
         <div class="content">
             <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
             <div id="sponsor_buttons">
-                <button id="sponsor_buy_button" role="button"><span class="text">Sponsor</span></button>
-                <button id="sponsor_contact_button" role="button"><span class="text">Contact</span></button>
+                <a href="" id="sponsor_buy_button">Sponsor</a>
+                <a href="#sponsor_contact_information" id="sponsor_contact_button">Contact</a>
             </div>
             <div id="sponsor_overlay">
                 <div id="sponsor_information">
@@ -46,6 +47,28 @@
                         <p id="sponsor_details_part_2">
                             Buy a sponsor now and we will literally place your product into our newest game, Shih Zoo. You can pick exactly where in the game you want to appear, upload different art, and give exact instructions on what you want us to do! Right now, we even offer a free trial, where we will show you exactly what your product or advertisement will look like in our creations. Any inquiries are welcome, definitely contact us if you are thinking of something outside the box, because the possibilities are endless! Price specifics can be discussed with our founder, Charles J. Conlan.
                         </p>
+                    </div>
+                    <div class="sponsor_contact_information" id="sponsor_contact_information">
+                        <div id="contact_section">
+                            <p id="contact_title">Shameless Communication</p>
+                            <p id="contact_secondary_title">Don't feel shame in reaching out!</p>
+                            <p id="contact_information">
+                                <i class="lni lni-envelope"></i> info@shamelesspp.com<br>
+                                <i class="lni lni-phone"></i> (917) 863-0915<br><br>
+                                <i class="lni lni-pin"></i> 280 South Winooski Avenue<br>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Burlington, VT 05401
+                            </p>
+                        </div>
+                        <div id="contact_form">
+                            <form name="contact_form">
+                                <input class="contact_form_name" type="text" name="contact_form_first_name" id="contact_form_first_name" placeholder="First name (required)" required>
+                                <input class="contact_form_name" type="text" name="contact_form_last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
+                                <input class="contact_form_email" type="text" name="contact_form_email" id="contact_form_email" placeholder="Email (required)" required>
+                                <input class="contact_form_company" type="text" name="contact_form_company" id="contact_form_company" placeholder="Company (if any)">
+                                <textarea class="contact_form_message" name="contact_form_message" id="contact_form_message" rows="10" placeholder="Your message" required></textarea>
+                                <input class="contact_form_submit_button" id="contact_form_submit_button" type="submit" value="Submit"/>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
