Investor landing page copied from sponsor landing page, changed developer title.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="index.html">PLAY</a></li>
                     <li><a href="sponsor.html">SPONSOR</a></li>
                     <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="#">DEVELOPER</a></li>
+                    <li><a href="#">DEVELOPER / PARTNER</a></li>
                     <li><a href="#">MERCHANDISE</a></li>
                 </ul>
             </div>
