--- a/investor.html
+++ b/investor.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="investor.css">
+        <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <title>Shameless Product Placement</title>
     </head>
@@ -19,9 +20,9 @@
             <div class="menu">
                 <ul class="menu_list">
                     <li><a href="index.html">PLAY</a></li>
-                    <li><a href="sponsor.html">SPONSOR</a></li>
+                    <li><a href="investor.html">SPONSOR</a></li>
                     <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="#">DEVELOPER</a></li>
+                    <li><a href="#">DEVELOPER / PARTNER</a></li>
                     <li><a href="#">MERCHANDISE</a></li>
                 </ul>
             </div>
@@ -29,7 +30,7 @@
         <div class="content">
             <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
             <div id="investor_buttons">
-                <a href="#sponsor_contact_information" id="sponsor_contact_button">Contact</a>
+                <a href="#investor_contact_information" id="investor_contact_button">Contact</a>
             </div>
             <div id="investor_overlay">
                 <div id="investor_information">
@@ -45,6 +46,28 @@
                             Investing in Shameless Product Placement presents a compelling opportunity at the intersection of media influence and consumer engagement. Under the visionary leadership of CEO Charles J. Conlan, the company has pioneered a disruptive approach to advertising that seamlessly integrates brands into popular culture narratives. This strategy not only enhances brand visibility but also cultivates a genuine connection with audiences who increasingly value authenticity. With a track record of delivering measurable ROI through strategic partnerships with top-tier brands across diverse industries, Shameless Product Placement is poised to capitalize on the evolving landscape of digital media consumption. By leveraging Conlan's innovative strategies and the company's proven ability to navigate complex media environments, investors stand to benefit from a forward-thinking approach that redefines the future of advertising.
                         </p>
                         <img id="investor_example_2" src="assets/example_image.png" alt="Investor Example 2">
+                    </div>
+                    <div class="investor_contact_information" id="investor_contact_information">
+                        <div id="contact_section">
+                            <p id="contact_title">Shameless Communication</p>
+                            <p id="contact_secondary_title">Don't feel shame in reaching out!</p>
+                            <p id="contact_information">
+                                <i class="lni lni-envelope"></i> info@shamelesspp.com<br>
+                                <i class="lni lni-phone"></i> (917) 863-0915<br><br>
+                                <i class="lni lni-pin"></i> 280 South Winooski Avenue<br>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Burlington, VT 05401
+                            </p>
+                        </div>
+                        <div id="contact_form">
+                            <form name="contact_form">
+                                <input class="contact_form_name" type="text" name="contact_form_first_name" id="contact_form_first_name" placeholder="First name (required)" required>
+                                <input class="contact_form_name" type="text" name="contact_form_last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
+                                <input class="contact_form_email" type="text" name="contact_form_email" id="contact_form_email" placeholder="Email (required)" required>
+                                <input class="contact_form_company" type="text" name="contact_form_company" id="contact_form_company" placeholder="Company (if any)">
+                                <textarea class="contact_form_message" name="contact_form_message" id="contact_form_message" rows="10" placeholder="Your message" required></textarea>
+                                <input class="contact_form_submit_button" id="contact_form_submit_button" type="submit" value="Submit"/>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
