Investor landing page prototype 1 - leads to third-party site potentially

--- a/sponsor.html
+++ b/sponsor.html
@@ -28,7 +28,9 @@
             </div>
         </header>
         <div class="content">
-            <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
+            <a href="index.html">
+                <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
+            </a>
             <div id="sponsor_buttons">
                 <a href="" id="sponsor_buy_button">Sponsor</a>
                 <a href="#sponsor_contact_information" id="sponsor_contact_button">Contact</a>
