--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             </div>
         </header>
         <div class="content">
-            <p><a href="">
+            <a href="index.html">
                 <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
-            </a></p>
+            </a>
             <img id="shih_tzu" src="assets/shih_tzu.png" alt="Shih Tzu">
             <img id="shih_zoo_logo" src="assets/shih_zoo_logo.png" alt="Shih Zoo Logo">
             <img id="download_button_apple" src="assets/download_button_apple.png" alt="Shih Zoo Download">
