--- a/investor.html
+++ b/investor.html
@@ -20,7 +20,7 @@
             <div class="menu">
                 <ul class="menu_list">
                     <li><a href="index.html">PLAY</a></li>
-                    <li><a href="investor.html">SPONSOR</a></li>
+                    <li><a href="sponsor.html">SPONSOR</a></li>
                     <li><a href="investor.html">INVESTOR</a></li>
                     <li><a href="#">DEVELOPER / PARTNER</a></li>
                     <li><a href="#">MERCHANDISE</a></li>
@@ -28,51 +28,98 @@
             </div>
         </header>
         <div class="content">
-            <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
-            <div id="investor_buttons">
-                <a href="#investor_contact_information" id="investor_contact_button">Contact</a>
+            <a href="index.html">
+                <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
+            </a>
+            <div class="main_investment_information">
+                <div class="video">
+                    <iframe id="shih_zoo_investment_video" src="https://www.youtube.com/embed/ScMzIvxBSi4?&theme=dark&autohide=2"frameborder="0"></iframe>
+                </div>
+                <div class="investment_information">
+                    <p id="title">Shih Zoo</p>
+                    <p id="description">A compelling story game featuring a cutesy shih tzu!</p>
+                    <p id="invested">$42 USD from 2 backers</p>
+                    <button id="options" data-toggle="modal" data-target="#options_menu">OPTIONS</button>
+                    <button id="invest">INVEST</button>
+                </div>
             </div>
-            <div id="investor_overlay">
-                <div id="investor_information">
-                    <p id="investor_title">Why invest in us?</p>
-                    <div class="investor_information_part_1">
-                        <img id="investor_example_1" src="assets/example_image.png" alt="Investor Example 1">
-                        <p id="investor_details_part_1">
-                            Investing in Shameless Product Placement presents a compelling opportunity due to its ability to leverage the power of subtle yet impactful advertising. In an era where traditional ads often face ad-blocking and viewer resistance, product placement seamlessly integrates brands into the narrative fabric of entertainment and media content. This approach not only circumvents ad fatigue but also capitalizes on the audience's engagement with the storyline, creating a deeper and more memorable brand association. As consumption patterns shift towards streaming platforms and digital content, the demand for effective product placement is on the rise. By investing in Shameless Product Placement, you tap into a growing market where brands are willing to pay premiums for strategic placements that align with their target demographics. This strategy not only promises potential for substantial financial returns but also positions your investment at the forefront of innovative marketing solutions in the evolving media landscape.
-                        </p>
-                    </div>
-                    <div class="investor_information_part_2">
-                        <p id="investor_details_part_2">
-                            Investing in Shameless Product Placement presents a compelling opportunity at the intersection of media influence and consumer engagement. Under the visionary leadership of CEO Charles J. Conlan, the company has pioneered a disruptive approach to advertising that seamlessly integrates brands into popular culture narratives. This strategy not only enhances brand visibility but also cultivates a genuine connection with audiences who increasingly value authenticity. With a track record of delivering measurable ROI through strategic partnerships with top-tier brands across diverse industries, Shameless Product Placement is poised to capitalize on the evolving landscape of digital media consumption. By leveraging Conlan's innovative strategies and the company's proven ability to navigate complex media environments, investors stand to benefit from a forward-thinking approach that redefines the future of advertising.
-                        </p>
-                        <img id="investor_example_2" src="assets/example_image.png" alt="Investor Example 2">
-                    </div>
-                    <div class="investor_contact_information" id="investor_contact_information">
-                        <div id="contact_section">
-                            <p id="contact_title">Shameless Communication</p>
-                            <p id="contact_secondary_title">Don't feel shame in reaching out!</p>
-                            <p id="contact_information">
-                                <i class="lni lni-envelope"></i> info@shamelesspp.com<br>
-                                <i class="lni lni-phone"></i> (917) 863-0915<br><br>
-                                <i class="lni lni-pin"></i> 280 South Winooski Avenue<br>
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Burlington, VT 05401
+            <div class="extra_investment_information">
+                <p id="title">OUR STORY</p>
+                <div class="team_section">
+                    <p class="section_titles">Who are we?</p>
+                    <div class="people">
+                        <img id="ceo" src="assets/charles_conlan.png" alt="Charles J. Conlan">
+                        <div class="ceo_information">
+                            <p class="name_titles" id="ceo_name">CEO Charles J. Conlan</p>
+                            <p class="section_information" id="ceo_information">
+                                Hey there! With a background rooted in game design at Champlain College, I've honed my skills in crafting immersive and engaging digital experiences. My journey began with a passion for merging creativity with technology, shaping me into a visionary leader within the interactive entertainment industry. At Shameless Product Placement, we innovate by seamlessly integrating branded content into gaming narratives, redefining how companies connect with audiences in the digital age. Our mission is to pioneer new frontiers in marketing while delivering compelling gameplay that resonates with players worldwide. Join us as we revolutionize the intersection of gaming and advertising, setting new standards for interactive storytelling.
                             </p>
                         </div>
-                        <div id="contact_form">
-                            <form name="contact_form">
-                                <input class="contact_form_name" type="text" name="contact_form_first_name" id="contact_form_first_name" placeholder="First name (required)" required>
-                                <input class="contact_form_name" type="text" name="contact_form_last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
-                                <input class="contact_form_email" type="text" name="contact_form_email" id="contact_form_email" placeholder="Email (required)" required>
-                                <input class="contact_form_company" type="text" name="contact_form_company" id="contact_form_company" placeholder="Company (if any)">
-                                <textarea class="contact_form_message" name="contact_form_message" id="contact_form_message" rows="10" placeholder="Your message" required></textarea>
-                                <input class="contact_form_submit_button" id="contact_form_submit_button" type="submit" value="Submit"/>
-                            </form>
+                    </div>
+                    <div class="people">
+                        <img id="game_developer" src="assets/example_image.png" alt="Game Designer">
+                        <div class="game_developer_information">
+                            <p class="name_titles" id="game_developer_name">Game Developer</p>
+                            <p class="section_information" id="game_developer_information">
+                                Hey there, I'm ___, a game developer here at Shameless Product Placement. Armed with a passion for gaming and a knack for coding, I'm part of a talented team dedicated to creating innovative and captivating digital experiences. My journey into game development started with a fascination for how technology can bring stories to life and evolved through hands-on experience at leading studios. At Shameless, I thrive on integrating engaging gameplay mechanics with strategic brand placements, ensuring our games not only entertain but also resonate with diverse audiences. Collaborating closely with designers and marketers, I contribute to crafting seamless narratives that seamlessly blend entertainment with promotional content, pushing the boundaries of interactive advertising. Join us in exploring the limitless possibilities at the intersection of gaming and marketing!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal" id="options_menu">  
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1>Invest in Shih Zoo</h1>
+                        <button type="button" class="close" data-dismiss="modal">×</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="options_menu_options">
+                            <img class="options_menu_images" src="assets/example_image.png" alt="Option 1">
+                            <p class="options_menu_titles">Investor Level 1</p>
+                            <p class="options_menu_values">$Cost of Investor Level 1</p>
+                            <p class="options_menu_descriptions">Thank you for investing in Shameless Product Placement! Any amount helps!</p>
+                            <p class="options_menu_benefits_title">Benefits:</p>
+                            <ul class="options_menu_benefits">
+                                <li>Our gratitude</li>
+                                <li>Extra perk 1</li>
+                                <li>Extra perk 2</li>
+                            </ul>
+                        </div>
+                        <div class="options_menu_options">
+                            <img class="options_menu_images" src="assets/example_image.png" alt="Option 2">
+                            <p class="options_menu_titles">Investor Level 2</p>
+                            <p class="options_menu_values">$Cost of Investor Level 2</p>
+                            <p class="options_menu_descriptions">Thank you for investing in Shameless Product Placement! Any amount helps!</p>
+                            <p class="options_menu_benefits_title">Benefits:</p>
+                            <ul class="options_menu_benefits">
+                                <li>Our gratitude</li>
+                                <li>Extra perk 1</li>
+                                <li>Extra perk 2</li>
+                            </ul>
+                        </div>
+                        <div class="options_menu_options">
+                            <img class="options_menu_images" src="assets/example_image.png" alt="Option 2">
+                            <p class="options_menu_titles">Investor Level 3</p>
+                            <p class="options_menu_values">$Cost of Investor Level 3</p>
+                            <p class="options_menu_descriptions">Thank you for investing in Shameless Product Placement! Any amount helps!</p>
+                            <p class="options_menu_benefits_title">Benefits:</p>
+                            <ul class="options_menu_benefits">
+                                <li>Our gratitude</li>
+                                <li>Extra perk 1</li>
+                                <li>Extra perk 2</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <script src="menu.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
