Investor landing page prototype 1 - added FAQ section

--- a/investor.html
+++ b/investor.html
@@ -66,6 +66,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="faq_section">
+                    <p class="section_titles">Frequently Asked Questions</p>
+                    <p class="questions">Why should I invest in Shameless Product Placement?</p>
+                    <p class="answers">Investing in our company allows us to fund our upcoming projects, such as Shih Zoo.</p>
+                    <p class="questions">What do I get from investing in Shameless Product Placement?</p>
+                    <p class="answers">You get our endless gratitude no matter how much you invest, but each tier gets you a specific amount of perks, and you can see them by clicking the OPTIONS button at the top of the page!</p>
+                    <p class="questions">Is there anything I can do to help?</p>
+                    <p class="answers">If you have any skills you think you can offer to us, please let us know at info@shamelesspp.com!</p>
+                    <p class="questions">Where can I download your apps to try them?</p>
+                    <p class="answers">You can download them on the App Store or on the Google Play Store.</p>
+                    <p class="questions">Where can I ask questions not listed in the FAQ?</p>
+                    <p class="answers">You can email us at info@shamelesspp.com.</p>
+                </div>
             </div>
         </div>
         <div class="modal" id="options_menu">  
