Added icons to sponsor landing page

--- a/sponsor.html
+++ b/sponsor.html
@@ -60,6 +60,10 @@
                                 <i class="lni lni-pin"></i> 280 South Winooski Avenue<br>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Burlington, VT 05401
                             </p>
+                            <a href="#"><p class="icons"><i class="lni lni-twitter"></i></p></a>
+                            <a href="#"><p class="icons"><i class="lni lni-facebook"></i></p></a>
+                            <a href="#"><p class="icons"><i class="lni lni-youtube"></i></p></a>
+                            <a href="#"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
                         </div>
                         <div id="contact_form">
                             <form name="contact_form">
