--- a/sponsor.html
+++ b/sponsor.html
@@ -32,8 +32,8 @@
                 <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
             </a>
             <div id="sponsor_buttons">
-                <a href="" id="sponsor_buy_button">Sponsor</a>
-                <a href="#sponsor_contact_information" id="sponsor_contact_button">Contact</a>
+                <a href="#"><button data-toggle="modal" data-target="#sponsor_options_menu" id="sponsor_options_menu_button">Sponsor</button></a>
+                <a href="#sponsor_contact_information"><button id="sponsor_contact_button">Contact</button></a>
             </div>
             <div id="sponsor_overlay">
                 <div id="sponsor_information">
@@ -79,7 +79,54 @@
                 </div>
             </div>
         </div>
+        <div class="modal" id="sponsor_options_menu">  
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1>Invest in Shameless Product Placement!</h1>
+                        <button type="button" class="close" data-dismiss="modal">×</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="sponsor_options_menu_options">
+                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_logo.png" alt="Sponsor Logo Placement">
+                            <p class="sponsor_options_menu_titles">Buy a logo on a placed product!</p>
+                            <p class="sponsor_options_menu_values">$</p>
+                            <p class="sponsor_options_menu_descriptions">Thank you for sponsoring Shameless Product Placement!</p>
+                            <p class="sponsor_options_menu_benefits_title">Benefits:</p>
+                            <ul class="sponsor_options_menu_benefits">
+                                <li>Your product's logo placed on a product in-game!</li>
+                                <li>Our gratitude</li>
+                            </ul>
+                        </div>
+                        <div class="sponsor_options_menu_options">
+                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_billboard.png" alt="Sponsor Billboard Placement">
+                            <p class="sponsor_options_menu_titles">Buy an advertisement on a billboard!</p>
+                            <p class="sponsor_options_menu_values">$</p>
+                            <p class="sponsor_options_menu_descriptions">Thank you for sponsoring Shameless Product Placement!</p>
+                            <p class="sponsor_options_menu_benefits_title">Benefits:</p>
+                            <ul class="sponsor_options_menu_benefits">
+                                <li>Your advertisement placed on a billboard in-game!</li>
+                                <li>Our gratitude</li>
+                            </ul>
+                        </div>
+                        <div class="sponsor_options_menu_options">
+                            <img class="sponsor_options_menu_images" src="assets/sponsor_option_cutscene.png" alt="Sponsor Cutscene Placement">
+                            <p class="sponsor_options_menu_titles">Buy product placement during a main cutscene!</p>
+                            <p class="sponsor_options_menu_values">$</p>
+                            <p class="sponsor_options_menu_descriptions">Thank you for sponsoring Shameless Product Placement!</p>
+                            <p class="sponsor_options_menu_benefits_title">Benefits:</p>
+                            <ul class="sponsor_options_menu_benefits">
+                                <li>Your product placed in-game during a main cutscene!</li>
+                                <li>Our gratitude</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="menu.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    </body>
 </html>
