Added placeholder photos

--- a/investor.html
+++ b/investor.html
@@ -39,7 +39,7 @@
                     <div class="investment_information">
                         <p id="title">Shameless Product Placement</p>
                         <p id="description">World class gaming meets brand promotion.</p>
-                        <p id="invested">$42 USD from 2 backers</p>
+                        <p id="invested">$_ USD from _ backers</p>
                         <button id="options" data-toggle="modal" data-target="#projects_menu">PROJECTS TO INVEST IN</button>
                         <a href="#investor_contact_information"><button id="information">GET INFORMATION</button></a>
                     </div>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="people">
-                        <img id="game_developer" src="assets/example_image.png" alt="Game Designer">
+                        <img id="game_developer" src="assets/game_designer.png" alt="Game Designer">
                         <div class="game_developer_information">
                             <p class="name_titles" id="game_developer_name">Game Developer</p>
                             <p class="section_information" id="game_developer_information">
@@ -118,27 +118,25 @@
                     </div>
                     <div class="modal-body">
                         <div class="projects_menu_options">
-                            <img class="projects_menu_images" src="assets/example_image.png" alt="Shih Zoo">
+                            <img class="projects_menu_images" src="assets/invest_shih_zoo.png" alt="Shih Zoo">
                             <p class="projects_menu_titles">Invest in Shih Zoo</p>
                             <p class="projects_menu_values">$</p>
                             <p class="projects_menu_descriptions">Thank you for investing in Shameless Product Placement! Any amount helps!</p>
                             <p class="projects_menu_benefits_title">Benefits:</p>
                             <ul class="projects_menu_benefits">
                                 <li>Our gratitude</li>
-                                <li>Extra perk 1</li>
-                                <li>Extra perk 2</li>
+                                <li>Equity depending on the value of your investment</li>
                             </ul>
                         </div>
                         <div class="projects_menu_options">
-                            <img class="projects_menu_images" src="assets/example_image.png" alt="Les Dudes">
+                            <img class="projects_menu_images" src="assets/invest_les_dudes.png" alt="Les Dudes">
                             <p class="projects_menu_titles">Invest in Les Dudes</p>
                             <p class="projects_menu_values">$</p>
                             <p class="projects_menu_descriptions">Thank you for investing in Shameless Product Placement! Any amount helps!</p>
                             <p class="projects_menu_benefits_title">Benefits:</p>
                             <ul class="projects_menu_benefits">
                                 <li>Our gratitude</li>
-                                <li>Extra perk 1</li>
-                                <li>Extra perk 2</li>
+                                <li>Equity depending on the value of your investment</li>
                             </ul>
                         </div>
                         <div class="projects_menu_options">
@@ -149,8 +147,7 @@
                             <p class="projects_menu_benefits_title">Benefits:</p>
                             <ul class="projects_menu_benefits">
                                 <li>Our gratitude</li>
-                                <li>Extra perk 1</li>
-                                <li>Extra perk 2</li>
+                                <li>Equity depending on the value of your investment</li>
                             </ul>
                         </div>
                         <div class="projects_menu_options">
@@ -161,8 +158,7 @@
                             <p class="projects_menu_benefits_title">Benefits:</p>
                             <ul class="projects_menu_benefits">
                                 <li>Our gratitude</li>
-                                <li>Extra perk 1</li>
-                                <li>Extra perk 2</li>
+                                <li>Equity depending on the value of your investment</li>
                             </ul>
                         </div>
                     </div>
