Fixed the formatting of the contact section

--- a/investor.html
+++ b/investor.html
@@ -41,7 +41,7 @@
                         <p id="description">World class gaming meets brand promotion.</p>
                         <p id="invested">$_ USD from _ backers</p>
                         <button id="options" data-toggle="modal" data-target="#projects_menu">PROJECTS TO INVEST IN</button>
-                        <a href="#investor_contact_information"><button id="information">GET INFORMATION</button></a>
+                        <a href="#contact_form_background"><button id="information">GET INFORMATION</button></a>
                     </div>
                 </div>
             </div>
@@ -83,6 +83,7 @@
                 </div>
                 <div class="investor_contact_information" id="investor_contact_information">
                     <div id="contact_section">
+                        <br><br><br><br><br><br><br><br><br><br>
                         <p id="contact_title">Shameless Communication</p>
                         <p id="contact_secondary_title">Don't feel shame in reaching out!</p>
                         <p id="contact_information">
@@ -97,7 +98,8 @@
                         <a href="#"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
                     </div>
                     <div id="contact_form">
-                        <form name="contact_form">
+                        <br><br><br><br><br><br><br><br><br><br>
+                        <form id="contact_form_background" name="contact_form">
                             <input class="contact_form_name" type="text" name="contact_form_first_name" id="contact_form_first_name" placeholder="First name (required)" required>
                             <input class="contact_form_name" type="text" name="contact_form_last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
                             <input class="contact_form_email" type="text" name="contact_form_email" id="contact_form_email" placeholder="Email (required)" required>
