Added contact page, updated menu

--- a/investor.html
+++ b/investor.html
@@ -19,11 +19,14 @@
             </div>
             <div class="menu">
                 <ul class="menu_list">
-                    <li><a href="index.html">PLAY</a></li>
+                    <li><a href="index.html">PLAY SHIH ZOO</a></li>
+                    <li><a href="home.html">HOME</a></li>
                     <li><a href="sponsor.html">SPONSOR</a></li>
                     <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="#">DEVELOPER / PARTNER</a></li>
+                    <li><a href="#">PARTNER</a></li>
                     <li><a href="#">MERCHANDISE</a></li>
+                    <li><a href="#">CAREERS</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
         </header>
@@ -80,34 +83,6 @@
                     <p class="answers">You can download them on the App Store or on the Google Play Store.</p>
                     <p class="questions">Where can I ask questions not listed in the FAQ?</p>
                     <p class="answers">You can email us at info@shamelesspp.com.</p>
-                </div>
-                <div class="investor_contact_information" id="investor_contact_information">
-                    <div id="contact_section">
-                        <br><br><br><br><br><br><br><br><br><br>
-                        <p id="contact_title">Shameless Communication</p>
-                        <p id="contact_secondary_title">Don't feel shame in reaching out!</p>
-                        <p id="contact_information">
-                            <i class="lni lni-envelope"></i> info@shamelesspp.com<br>
-                            <i class="lni lni-phone"></i> (917) 863-0915<br><br>
-                            <i class="lni lni-pin"></i> 280 South Winooski Avenue<br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Burlington, VT 05401
-                        </p>
-                        <a href="#"><p class="icons"><i class="lni lni-twitter"></i></p></a>
-                        <a href="#"><p class="icons"><i class="lni lni-facebook"></i></p></a>
-                        <a href="#"><p class="icons"><i class="lni lni-youtube"></i></p></a>
-                        <a href="#"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
-                    </div>
-                    <div id="contact_form">
-                        <br><br><br><br><br><br><br><br><br><br>
-                        <form id="contact_form_background" name="contact_form">
-                            <input class="contact_form_name" type="text" name="contact_form_first_name" id="contact_form_first_name" placeholder="First name (required)" required>
-                            <input class="contact_form_name" type="text" name="contact_form_last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
-                            <input class="contact_form_email" type="text" name="contact_form_email" id="contact_form_email" placeholder="Email (required)" required>
-                            <input class="contact_form_company" type="text" name="contact_form_company" id="contact_form_company" placeholder="Company (if any)">
-                            <textarea class="contact_form_message" name="contact_form_message" id="contact_form_message" rows="10" placeholder="Your message" required></textarea>
-                            <input class="contact_form_submit_button" id="contact_form_submit_button" type="submit" value="Submit"/>
-                        </form>
-                    </div>
                 </div>
             </div>
         </div>
