--- a/sponsor.html
+++ b/sponsor.html
@@ -19,11 +19,14 @@
             </div>
             <div class="menu">
                 <ul class="menu_list">
-                    <li><a href="index.html">PLAY</a></li>
+                    <li><a href="index.html">PLAY SHIH ZOO</a></li>
+                    <li><a href="home.html">HOME</a></li>
                     <li><a href="sponsor.html">SPONSOR</a></li>
                     <li><a href="investor.html">INVESTOR</a></li>
-                    <li><a href="#">DEVELOPER / PARTNER</a></li>
+                    <li><a href="#">PARTNER</a></li>
                     <li><a href="#">MERCHANDISE</a></li>
+                    <li><a href="#">CAREERS</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
             </div>
         </header>
@@ -33,7 +36,7 @@
             </a>
             <div id="sponsor_buttons">
                 <a href="#"><button data-toggle="modal" data-target="#sponsor_options_menu" id="sponsor_options_menu_button">Sponsor</button></a>
-                <a href="#sponsor_contact_information"><button id="sponsor_contact_button">Contact</button></a>
+                <a href="contact.html"><button id="sponsor_contact_button">Free Trial</button></a>
             </div>
             <div id="sponsor_overlay">
                 <div id="sponsor_information">
@@ -49,32 +52,6 @@
                         <p id="sponsor_details_part_2">
                             Buy a sponsor now and we will literally place your product into our newest game, Shih Zoo. You can pick exactly where in the game you want to appear, upload different art, and give exact instructions on what you want us to do! Right now, we even offer a free trial, where we will show you exactly what your product or advertisement will look like in our creations. Any inquiries are welcome, definitely contact us if you are thinking of something outside the box, because the possibilities are endless! Price specifics can be discussed with our founder, Charles J. Conlan.
                         </p>
-                    </div>
-                    <div class="sponsor_contact_information" id="sponsor_contact_information">
-                        <div id="contact_section">
-                            <p id="contact_title">Shameless Communication</p>
-                            <p id="contact_secondary_title">Don't feel shame in reaching out!</p>
-                            <p id="contact_information">
-                                <i class="lni lni-envelope"></i> info@shamelesspp.com<br>
-                                <i class="lni lni-phone"></i> (917) 863-0915<br><br>
-                                <i class="lni lni-pin"></i> 280 South Winooski Avenue<br>
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Burlington, VT 05401
-                            </p>
-                            <a href="#"><p class="icons"><i class="lni lni-twitter"></i></p></a>
-                            <a href="#"><p class="icons"><i class="lni lni-facebook"></i></p></a>
-                            <a href="#"><p class="icons"><i class="lni lni-youtube"></i></p></a>
-                            <a href="#"><p class="icons"><i class="lni lni-linkedin"></i></p></a>
-                        </div>
-                        <div id="contact_form">
-                            <form name="contact_form">
-                                <input class="contact_form_name" type="text" name="contact_form_first_name" id="contact_form_first_name" placeholder="First name (required)" required>
-                                <input class="contact_form_name" type="text" name="contact_form_last_name" id="contact_form_last_name" placeholder="Last name (required)" required>
-                                <input class="contact_form_email" type="text" name="contact_form_email" id="contact_form_email" placeholder="Email (required)" required>
-                                <input class="contact_form_company" type="text" name="contact_form_company" id="contact_form_company" placeholder="Company (if any)">
-                                <textarea class="contact_form_message" name="contact_form_message" id="contact_form_message" rows="10" placeholder="Your message" required></textarea>
-                                <input class="contact_form_submit_button" id="contact_form_submit_button" type="submit" value="Submit"/>
-                            </form>
-                        </div>
                     </div>
                 </div>
             </div>
